# hms-mm

./: .gitignore  CHANGELOG.md  README.md  version.h
docs/: QA_pass_1_2026-04-22.md  QA_pass_1_response.md  QA_pass_2_2026-04-22.md  QA_pass_2_response.md  QA_pass_3_2026-04-22.md  QA_pass_3_response.md
miner/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
miner/main/: CMakeLists.txt  config.h  ezshare_client.c  ezshare_client.h  main.c  nvs_config.c  nvs_config.h  scanner_task.c  scanner_task.h  uart_handler.h  wifi_manager.c  wifi_manager.h
mule/: CMakeLists.txt
mule/main/: CMakeLists.txt  captive_portal.c  captive_portal.h  config.h  file_cache.c  file_cache.h  file_server.c  file_server.h  main.c  mule_task.c  mule_task.h  nvs_config.c  nvs_config.h  uart_handler.c  wifi_manager.c  wifi_manager.h
