idf_component_register(
    SRCS
        "main.c"
        "wifi_manager.c"
        "uart_handler.c"
        "nvs_config.c"
        "captive_portal.c"
        "file_cache.c"
        "file_server.c"
        "mule_task.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_http_server
        nvs_flash
        driver
        json
        lwip
    PRIV_REQUIRES
        mbedtls
        esp_timer
)
